--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "expo-sqlite": "~11.1.1",
-    "expo-build-properties": "~0.6.0"
+    "expo-build-properties": "~0.6.0",
+    "expo-system-ui": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
