--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo": "49.0.0",
+    "expo-build-properties": "~0.8.3",
+    "expo-sqlite": "~11.3.3",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "expo-sqlite": "~11.1.1",
-    "expo-build-properties": "~0.6.0",
-    "expo-system-ui": "~2.2.1"
+    "react-native": "0.72.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
