--- a/eas.json
+++ b/eas.json
@@ -1,12 +1,15 @@
 {
   "cli": {
-    "version": ">= 3.15.0"
+    "version": ">= 14.5.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
