--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "51",
-    "expo-build-properties": "~0.12.3",
-    "expo-sqlite": "~14.0.4",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "react": "18.2.0",
-    "react-native": "0.74.3"
+    "expo": "^52.0.27",
+    "expo-build-properties": "~0.13.2",
+    "expo-sqlite": "~15.0.6",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "react": "18.3.1",
+    "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
