--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^52.0.27",
+    "expo": "~52.0.28",
     "expo-build-properties": "~0.13.2",
-    "expo-sqlite": "~15.0.6",
+    "expo-sqlite": "~15.1.1",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "react": "18.3.1",
