--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "e2e": "maestro test .maestro/flow.yaml"
   },
   "dependencies": {
     "expo": "~52.0.36",
