--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "e2e": "maestro test .maestro/flow.yaml"
   },
   "dependencies": {
-    "expo": "~52.0.46",
-    "expo-build-properties": "~0.13.2",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "expo": "^53.0.7",
+    "expo-build-properties": "~0.14.6",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
