--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "e2e": "maestro test .maestro/flow.yaml"
   },
   "dependencies": {
-    "expo": "^53.0.7",
+    "expo": "53.0.9",
     "expo-build-properties": "~0.14.6",
-    "expo-sqlite": "~15.2.9",
+    "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2"
