--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       "package": "com.abhishandy.dlog",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#dbd7d2"
+        "backgroundColor": "#2c2b2e"
       }
     },
     "extra": {
