--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "e2e": "maestro test .maestro/flow.yaml"
   },
   "dependencies": {
-    "expo": "53.0.20",
-    "expo-build-properties": "~0.14.8",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5"
+    "expo": "^54.0.1",
+    "expo-build-properties": "~1.0.7",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.7",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~6.0.11"
   },
   "private": true
 }
