--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,8 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "bun": "1.3.7"
     }
   },
   "submit": {
